--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.MyMarketplace"
         tools:targetApi="31">
         <activity
+            android:name=".ItemsViewActivity"
+            android:exported="false" />
+        <activity
             android:name=".SearchActivity"
             android:exported="false">
             <meta-data
