--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,19 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    sourceSets {
+
+        main {
+            assets {
+                srcDirs 'src/main/assets'
+            }
+        }
+        test {
+            resources {
+                srcDirs 'src/test/assets'
+            }
+        }
+    }
 }
 
 dependencies {
