List View of all the product names and added activity for single product view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,11 @@
         android:theme="@style/Theme.MyMarketplace"
         tools:targetApi="31">
         <activity
-            android:name=".ItemsViewActivity"
+            android:name=".ItemInfo"
             android:exported="false" />
+        <activity
+            android:name=".ItemsViewActivity"
+            android:exported="true"></activity>
         <activity
             android:name=".SearchActivity"
             android:exported="false">
