Adding seller view and implementing refresh item functionality

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyMarketplace"
         tools:targetApi="31">
+        <activity
+            android:name=".SellerInfo"
+            android:exported="false" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -23,9 +28,6 @@
             android:name=".MapsActivity"
             android:exported="false"
             android:label="@string/title_activity_maps" />
-        <activity
-            android:name=".SellerInfo"
-            android:exported="false" />
         <activity
             android:name=".ItemInfo"
             android:exported="false" />
@@ -50,8 +52,7 @@
 
             <meta-data
                 android:name="android.app.lib_name"
-                android:value=""
-                />
+                android:value="" />
         </activity>
     </application>
 
