Adding testing for all entity files

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,11 @@ android {
                 srcDirs 'src/test/assets'
             }
         }
+        debug {
+            res {
+                srcDirs 'src/debug/res', 'src/test/resources'
+            }
+        }
     }
     buildFeatures {
         viewBinding true
