Last minute UI update + Statement of Originality

--- a/items/statement-of-originality.yml
+++ b/items/statement-of-originality.yml
@@ -47,7 +47,7 @@ members:
     uid: u7145408
   - name: Andrew Howes
     uid: u1058852
-  - name:
-    uid:
+  - name: Long Vu
+    uid: u6699146
   - name:
     uid:
